--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -36,14 +36,14 @@
 				<!-- <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>  -->
 				Login
 			</button>
+			<a mat-button href="https://elearning.iirs.gov.in/mdl/login/forgot_password.php" target="_blank">Forgot Password?</a>
 		  </div>
 		  <hr>
 		</form>
 	  </mat-card-content>
-	  <!-- <mat-card-actions>
-	    <button mat-button>T&C</button>
-	    <button mat-button [routerLink]="['/signup']">SIGNUP</button>
-	  </mat-card-actions> -->
+	  <mat-card-actions>
+	    <a mat-raised-button href="https://elearning.iirs.gov.in/edusatregistration/student" color="teal" target="_blank">Register</a>
+	  </mat-card-actions>
 	</mat-card>
 
 </div>
