--- a/src/app/components/offline-session/detail/offline-session-detail.component.html
+++ b/src/app/components/offline-session/detail/offline-session-detail.component.html
@@ -1,11 +1,13 @@
 <div class="button-row">
   <a mat-raised-button color="primary" [routerLink]="['/offline-session']"><mat-icon>list</mat-icon></a>
 </div>
+<!-- <div id="player"></div> -->
+
 <mat-card class="example-card" *ngIf="session">
   
   <mat-card-content>
     <div class="iframe-container">
-      <iframe width="660" height="415" [src]="videoUrl | safeUrl" *ngIf="videoUrl" frameborder="0" allowfullscreen></iframe>
+      <iframe id="player" width="660" height="415" [src]="videoUrl | safeUrl" *ngIf="videoUrl" frameborder="0" allowfullscreen></iframe>
     </div>
   </mat-card-content>
   <mat-card-content>
@@ -14,7 +16,6 @@
   </mat-card-content>
   <!-- <mat-card-actions>
     <a mat-raised-button color="primary" [routerLink]="['/question-edit', session.lecture_id]"><mat-icon>edit</mat-icon></a>
-    <a mat-raised-button color="warn" (click)="deleteSession(session.lecture_id)"><mat-icon>delete</mat-icon></a>
   </mat-card-actions> -->
 </mat-card>
   
