--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,9 @@ body {
      font-family: 'Montserrat', sans-serif;
      height: 100vh;
 }
+.mat-toolbar.mat-primary {
+    z-index: 999;
+}
 .spacer {
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
