Add reply and delete in chat messages

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -129,9 +129,9 @@ section .mat-list .mat-list-avatar{
   padding: 8px;
   position: relative;
   margin: 8px 0;
-  max-width: 85%;
-  word-wrap: break-word;
-  z-index: -1;
+  max-width: 90%;
+  // word-wrap: break-word;
+  // z-index: -1;
 }
 
 .message:after {
@@ -202,6 +202,21 @@ section .mat-list .mat-list-avatar{
 .message.received {
   background: #fff;
   border-radius: 0px 5px 5px 5px;
+  float: left;
+}
+.parent-container .parent-quoted{
+  width: 100%;
+  clear: both;
+  background: rgba(124, 122, 122, 0.3);
+  padding:  0 3px;
+  padding-bottom: 3px;
+  border-left: 2px solid rgba(124, 122, 122, 0.9);
+  border-radius: 3px 3px 3px 3px;
+}
+.parent-container .message.received {
+  background: rgb(124, 122, 122);
+  border-radius: 5px 5px 0px 0px;
+  width: 100%;
   float: left;
 }
 
