--- a/src/app/components/reports/reports-mongo.component.html
+++ b/src/app/components/reports/reports-mongo.component.html
@@ -1,21 +1,22 @@
 <div class="button-row">
     <button *ngIf="totalQuizResponse" mat-raised-button color="primary" [matBadge]="totalQuizResponse.length" matBadgePosition="after" matBadgeColor="accent" (click)="getQuizReportFromMongo()"><mat-icon>refresh</mat-icon> Total Quiz Response</button>
 </div>
-<mat-form-field class="half-width">
+<mat-form-field class="w60 pr-4">
     <mat-select placeholder="Course" [(value)]="courseId">
+      <mat-option value="Any" (click)="getQuizReportFromMongo()">ALL</mat-option>
       <mat-option *ngFor="let course of courseList" [value]="course.id" (click)="getQuizReportFromMongo()">{{course.id}}: {{course.fullname}}</mat-option>
     </mat-select>
 </mat-form-field>
-<mat-form-field  class="half-width">
+<mat-form-field  class="w40">
   <input matInput [matDatepickerFilter]="myFilter" [matDatepicker]="picker1" [max]="2019-9-5" placeholder="Quiz Date" [formControl]="date" 
     (dateInput)="addEvent('input', $event)" (dateChange)="addEvent('change', $event)">
   <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
   <mat-datepicker #picker1></mat-datepicker>
 </mat-form-field>
 <!-- <mat-divider></mat-divider> -->
-<mat-form-field>
+<!-- <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search">
-</mat-form-field>
+</mat-form-field> -->
 <!-- {{quizResults[0]|json}} -->
 
 <div class="mat-elevation-z8">
@@ -58,6 +59,12 @@
 
 <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]"></mat-paginator>
 </div>
+<!-- <div class="fab-container">
+  <button mat-fab color="primary" class="fab-toggler"
+          (click)="openFilterDialog()">
+    <i class="material-icons">filter_list</i>
+  </button>
+</div> -->
 
 
 
